--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,5 +2,9 @@
 
 <h1>Welcome to ImagePick</h1>
 <p>A test of how to collect images all together!</p>
-<center><button class='btn-primary'> Get Pinning!</center>
+<center><button type="button" class="btn btn-danger">Get Pinning!</button></center>
+
+
+
+
 </div>
