--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+h1 {
+	color: white;
+	margin-bottom: 20px;
+	text-shadow: 2px 2px 8px #000000;
+}
+
+.container {
+    image-path("canvasBack.png");
+   
+
+}
