--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,8 +8,8 @@
   <thead>
     <tr>
       <th>First name</th>
-      <th>Last Name name</th>
-      <th>Email</th>
+      <th>Contact</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,11 +17,11 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.first_name %></td>
+        <td><%= user.full_name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'User Info', user, class:"btn btn-info" %></td>
+        <td><%= link_to 'Edit User', edit_user_path(user), class:"btn btn-warning" %></td>
+        <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -29,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, class:"btn btn-success" %>
